pbdBASE 0.3-0 (2014-) --------------------------------------------------

2014-3-6:
 * Stopgap fixed regression in MKSUBMAT.
 * Stopgap fixed regression in MKGBLMAT.

2014-2-4:
 * Updated vignette format.
 * Fixed author affiliation in vignette.

2014-2-2:
 * Linked with SEXPtools.
 * Refactored internal wrappers to use SEXPtools.

2014-1-31:
 * ownany() bug fixed that affected some grid shapes.

2014-1-14:
  * Vignette copyright updated.

2013-12-16:
  * PDGELS bug fixes.


pbdBASE 0.2-3 (2013-12-14) --------------------------------------------------

2013-12-13:
  * Fixed errors in manual.

2013-12-11:
  * Fixed matrix exponental bugs.

2013-10-30:
  * Added matrix exponentiation drivers.

2013-8-14:
  * Added experimental pdsyevx wrapper.

2013-7-20:
  * Added driver for (non-symmetric) eigenvalue calculator.


pbdBASE 0.2-2 (2013-7-8) --------------------------------------------------

2013-6-28:
  * Nasty init.grid() bugfix.

2013-6-7:
  * Bugfix for changing between BLACS and MPI process numbering.

2013-5-24:
  * Added experimental methods for level 2 distributed-distributed R-like BLAS.

2013-5-9:
  * Fixed initialization bug in pdgemr2d.


pbdBASE 0.2-1 (2013-3-25) --------------------------------------------------

2013-3-20:
  * Added PDSYEV wrappers.


pbdBASE 0.2-0 (2013-3-12) --------------------------------------------------

2013-3-12:
  * Final touches for CRAN.

2013-02-26:
  * Created better separation between pbdBASE and pbdDMAT packages

2013-02-05:
  * Completely redid the internals.  Much less stupid/wasteful now.

2013-01-29:
  * Expose BLACS C extension; BLACS pointers now exportable.
  * Added pdsyrk wrappers.
  * Modified pdgemm wrappers.

2013-01-04:
  * Added new matrix norm and condition number routines.
  * Fix .Last.lib problem.

2012-12-17:
  * Fixed bug in SEXP wrappers of ScaLAPACK functions; passing 0-byte Ralloc'd vectors.
  * Fix multi-arch problem.
  * Add copyright to vignette.

